# newsletter-signup-service

./: .env  .gitignore  Cargo.toml  Dockerfile  audit.toml  build.sh  cloudbuild.yaml  codecov.yml  configuration.yaml  container.template.json  readme.md  render.yaml  spec.yaml  sqlx-data.json
.cargo/: audit.toml
.cursor/commands/: code_review.mb
.github/workflows/: audit-on-push.yml  build-and-push-to-gcr.yml  general.yml  scheduled-audit.yml
.sqlx/: query-048cfe714587dae4e7528bc573df4055f8a4bba9d2a64af48e7f351125b85558.json  query-054ec57fae319fbab263b155d257c097203c5d18a3e6e5ffe43c042b50dbb94d.json  query-11b4c92a5d7eb459c828764bc6d96aac45c0c9afe3dcb7396cece12d93316884.json  query-1709714b3fb5d8092629888dbcf7c14cddc26ab01a69dea0fdba444a9751d349.json  query-2142e2864884599dfcb830aa7a07121c4df6e048ef18b4100dbad54d8b0a6aa6.json  query-318599a02b0f9af385b3db233ea1a4e1e587b5698b95fc91af1efd5ff7636e79.json  query-4831a46d37fc42180b43fcdbe0364bd88f2bb5e411b8236d1d4cee85219b6e55.json  query-5ac034a1563a32c6882034efa3cf31cd0a1fedaa69f8cd820a80ac02432d8273.json  query-6838f50a66a76ee062f685133371fe057795b4321cfc1eae0747575f44bead85.json  query-73e3660421fbc68ce837ef0b0de2c19d318843fd58394da31a07d43853864f39.json  query-7d1ede762b32132048d895a5456da48245ce3fb2f428d1a17ec4d124cebbda06.json  query-8505b233f232dbed327ec86e806eb3caba2826b6f8f5869fa5bcc43793bb9359.json  query-872318a33cc3c3612f99cb420d00a9e92f264ccadbf61d0bcb52c9c6cb65af2d.json  query-9021c8762ee1570fa8202ae3d560581b3f81fe49b91a0a6b6a1a913fdc144f6f.json  query-9332844c07a604b7cec88d05ee1032db491c79a9016a81b4e1b91234a4622ce3.json  query-9450cf34c0c7da744be70be0ac7f1cca0f3acddeb7ffa2c14989a3eb295fa964.json  query-9dee5eaa120d073e30affe492946af797d2b708fb5855ea6763deef099be0747.json  query-a2a08aa828ddea78a11b97f832ba0394a63178e8d3d0c9a5ad3e143c5e66d10e.json  query-abe620ac366bc123691b0b475171fb27d3eaba2fb43a836651fc4b5d1b625c2f.json  query-aed516042c50b2a6a025d5b5dd862e6db1e10c2a9dba5c004e2177df3d6e8e0c.json  query-bc94521b6940ec0a99805622a95977f73bdeb73517ac7fa9ad4fa9a883df974f.json  query-c10b07b121fbf973a74bd9e36ca13f353276f4bd3edb3fbac4a04ce5422dfca3.json  query-c353dea54129349c803085cfe7149d4a9b67ad416116f80fc565e04a3e3410ab.json  query-c4c4a86508160552322fc4fa19bab4bbdc352648011bd636545b732e48f62e47.json  query-c7cf6cd5bcc61d40ac6ca6f920e8422ed6d94485d7dfbb6d6347b0e3c7c6adbf.json  query-c8d93797cd1be5068276177bcc40f589689eba5fd4e86858a81cd3770827f660.json  query-ca1988789912be726faaa2cc94693b62f7f968ad6d7dcd68d7c4319c390e10f3.json  query-dd5c95445686c69cad6c5d48563c0081ccc1ec487cbc1441372a7eec4ff1196d.json  query-e439cae1d8e3efcbd4e986a7faf230172a7e8a3c2bc4aee756d58f891ca42307.json  query-f4391c384af6a66bd755318bddfbc7f23bd63590ed7bbc8604baede8b7d2599d.json
configuration/: base.yaml  production.yaml
docs/: API.md
migrations/: 20220221130541_create_subscribers_table.sql  20220221131058_create_subscriptions_table.sql  20220307150942_create_indexes.sql  20220308115229_make_fk_not_null.sql  20220308163920_make_everything_not_null.sql  20220314004231_add_user_id.sql  20220315110432_create_users_table.sql  20220403125118_create_otp_table.sql  20220418111259_create_subscription_event_history_table.sql  20220420125442_create_checkout_session_table.sql  20220420125506_create_stripe_id_idx.sql  20220429170416_add_stripe_customer_id_to_subscriber.sql  20220529134024_add_user_group.sql  20220604170813_add_more_fields_to_subscriptions.sql  20240121144802_webhook_events.sql  20240121215335_webhook_events_index.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  tests.rs
src/auth/: authorization.rs  mod.rs  password_hashing.rs  token.rs
src/background/: mod.rs  new_subscription_notifier.rs  subscription_history_storer.rs
src/db/: checkout_session_db_broker.rs  mod.rs  otp_db_broker.rs  subscribers.rs  subscribers_db_broker.rs  subscription_history_db_broker.rs  subscriptions.rs  subscriptions_db_broker.rs  users.rs  webhook_event_db_broker.rs
src/domain/: checkout_models.rs  mod.rs  new_subscriber.rs  new_subscription.rs  new_user.rs  otp_models.rs  stripe_models.rs  subscriber_email.rs  subscriber_models.rs  subscriber_name.rs  subscription_history_models.rs  subscription_models.rs  user_models.rs  valid_email.rs  valid_name.rs  valid_string.rs  webhook_event.rs
src/models/: mod.rs  subscriber.rs  subscription.rs
src/routes/: mod.rs  payment.rs  stripe_checkout.rs  subscribers.rs  subscriptions.rs  users.rs  webhook.rs
src/stripe_client/: mod.rs  stripe_models.rs
src/subscriber/: handlers.rs  mod.rs  model.rs  subscriber.rs
src/subscription/: mod.rs  model.rs  subscription.rs
src/util/: mod.rs
tests/: health_check.rs  subscribers_tests.rs  subscriptions_tests.rs  util.rs
tests/api/: checkout_session_db_tests.rs  checkout_tests.rs  end_to_end_tests.rs  health_check.rs  helper.rs  main.rs  otp_db_test.rs  payment_tests.rs  subscriber_db_test.rs  (+8 more)
(+1 files in other folders)
