[package]
name = "newsletter-signup-service"
version = "0.4.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-signup-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
actix-web-httpauth = "0.6.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5.11", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde-aux = "3"
uuid = { version = "0.8", features = ["serde", "v4"] }
config = "0.12.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5.0-rc.3"
unicode-segmentation = "1"
validator = "0.14.0"
base64 = "0.13.0"
anyhow = "1"
derive_more = "0.99.17"
cached = "0.34.0"
jsonwebtokens = "1"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"
wiremock = "0.5"