[package]
name = "newsletter-signup-service"
version = "0.8.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-signup-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22.1"
cached = "0.54.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
config = "0.15.8"
derive_more = { version = "2.0.1", features = ["full"] }
jsonwebtokens = "1"
log = "0.4.22"
rand = { version = "0.9.0", features = ["std_rng"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "multipart"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "3"
linkify = "0.10"
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.9.0"
url = "2.2.2"
wiremock = "0.6.2"
