[package]
name = "newsletter-signup-service"
version = "1.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-signup-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
anyhow = "1"
argon2 = "0.5.3"
getrandom = "0.2"
base64 = "0.22.1"
cached = "0.56.0"
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
config = "0.15.19"
derive_more = { version = "2.1.1", features = ["full"] }
jsonwebtokens = "1"
mailtrap-rs = "0.1.1"
log = "0.4.29"
rand = { version = "0.10.0", features = ["std_rng"] }
rand_core = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "4"
linkify = "0.10"
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.10.0"
url = "2.5.8"
wiremock = "0.6.5"
